Import of KASTNER/WWW-Scraper-Gmail-0.04 from CPAN.
gitpan-cpan-distribution: WWW-Scraper-Gmail
gitpan-cpan-version:      0.04
gitpan-cpan-path:         KASTNER/WWW-Scraper-Gmail-0.04.tar.gz
gitpan-cpan-author:       KASTNER
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -47,6 +47,9 @@ These are the functions in the Module, they may change, but it will be noted her
     countMail()
         returns the number of unread msgs from inbox
 
+    setPrefs({ Signature => "Sig", MaxPer => 25 });
+        sets some preferences
+
 DEPENDENCIES
 
 This module requires these other modules and libraries:
