--- a/Changes
+++ b/Changes
@@ -11,3 +11,10 @@ Revision history for Perl extension WWW::Scraper::Gmail.
 
 0.03  Tue, 29 Jun 2004 11:27:52 -0400
     - Put cookie info in a "pid" file so that it can forego the login stuff each time
+
+0.04 Sun, 25 Jul 2004 04:12:14 -0400
+    - Added setPrefs for changing your GMail preferences.
+        call like this
+        WWW::Scraper::Gmail::setPrefs( { Signature => "You new signature here", MaxPer => 100 } );
+        both are optional, the max per's valid numbers are 25, 50, 100 (messages per page).
+
