Import of KASTNER/WWW-Scraper-Gmail-0.09 from CPAN.
gitpan-cpan-distribution: WWW-Scraper-Gmail
gitpan-cpan-version:      0.09
gitpan-cpan-path:         KASTNER/WWW-Scraper-Gmail-0.09.tar.gz
gitpan-cpan-author:       KASTNER
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -55,8 +55,9 @@ DEPENDENCIES
 This module requires these other modules and libraries:
 
   LWP
-  Crypt::SSLeay
+  Crypt::SSLeay (or any SSL thingie for LWP)
   ENV
+  HTML::Entities
 
 COPYRIGHT AND LICENCE
 
